tests/compile_pass/public_headers/runtime_error.cpp
#include <pb/runtime/error.hpp>

int pb_public_header_runtime_error() { return 0; }
